# app-template

./: .genignore  .gitignore  Cargo.toml  README.md  cargo-generate.toml  chain-info.ts  docker-compose.yml  example.env  justfile  post-script.rhai  state.json  template-setup.sh
.cargo/: config.toml
.github.template/workflows/: check.yml
.github/workflows/: clippy.yml  scheduled.yml  test.yml
contracts/adapter/: Cargo.toml
contracts/adapter/examples/: local_daemon.rs  publish.rs  schema.rs
contracts/adapter/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/adapter/src/handlers/: execute.rs  instantiate.rs  mod.rs  query.rs
contracts/adapter/tests/: integration.rs
contracts/app/: Cargo.toml  metadata.json
contracts/app/examples/: local_daemon.rs  schema.rs
contracts/app/src/: contract.rs  error.rs  lib.rs  msg.rs
contracts/app/src/handlers/: execute.rs  instantiate.rs  migrate.rs  query.rs
contracts/app/src/replies/: instantiate.rs  mod.rs
contracts/app/tests/: integration.rs
contracts/my-adapter/: Cargo.toml
contracts/my-adapter/src/: api.rs
contracts/my-app/: Cargo.toml
contracts/my-app/src/handlers/: instantiate.rs
contracts/{{adapter_name | kebab_case}}/: Cargo.toml  metadata.json
contracts/{{adapter_name | kebab_case}}/src/: api.rs  contract.rs  lib.rs
contracts/{{adapter_name | kebab_case}}/src/handlers/: query.rs
contracts/{{adapter_name | kebab_case}}/tests/: integration.rs
contracts/{{adapter_name}}/: Cargo.toml  metadata.json
contracts/{{adapter_name}}/src/: api.rs  contract.rs  error.rs  lib.rs  msg.rs
contracts/{{adapter_name}}/src/handlers/: execute.rs  instantiate.rs  query.rs
contracts/{{adapter_name}}/tests/: integration.rs
contracts/{{app_name | kebab_case}}/: Cargo.toml
contracts/{{app_name | kebab_case}}/src/: lib.rs
contracts/{{app_name | kebab_case}}/src/handlers/: migrate.rs
contracts/{{app_name | kebab_case}}/src/replies/: instantiate.rs
contracts/{{app_name | kebab_case}}/tests/: integration.rs
contracts/{{app_name}}/: Cargo.toml  metadata.json
contracts/{{app_name}}/src/: contract.rs  error.rs  lib.rs  msg.rs
contracts/{{app_name}}/src/handlers/: execute.rs  instantiate.rs  migrate.rs  query.rs
contracts/{{app_name}}/src/ibc/: callback.rs  module.rs
contracts/{{app_name}}/src/replies/: instantiate.rs
contracts/{{app_name}}/tests/: integration.rs
contracts/{{standalone_name}}/: Cargo.toml  metadata.json
contracts/{{standalone_name}}/src/: contract.rs  error.rs  interface.rs  lib.rs  msg.rs
contracts/{{standalone_name}}/tests/: integration.rs
examples/: deploy.rs  deploy_pion.rs  schema.rs
frontend/: .env.example  README.md  abstract.config.ts  bun.lockb  codegen.yml  graphql.config.yml  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/_components/: abstract-money.tsx  abstract-subgraph-api.tsx  account-info.tsx  codegen-contract.tsx  connect-wallet.tsx  create-aa.tsx  create-abstract-account.tsx  create-account.tsx  generated-contract-example.tsx  graz-connection.tsx  header.tsx  query-abstract-subgraph.tsx  wallet-connection.tsx
frontend/app/_constants/: chains.ts
frontend/app/_generated/generated-abstract/: index.ts
frontend/app/_generated/generated-abstract/cosmwasm-codegen/: Board.client.ts  Board.message-builder.ts  Board.message-composer.ts  Board.react-query.ts  Board.types.ts  Cw20Base.client.ts  Cw20Base.message-builder.ts  Cw20Base.message-composer.ts  Cw20Base.react-query.ts  Cw20Base.types.ts  Cw721Base.client.ts  Cw721Base.message-builder.ts  Cw721Base.react-query.ts  Cw721Base.types.ts  EvmNote.client.ts  EvmNote.message-builder.ts  EvmNote.react-query.ts  EvmNote.types.ts
frontend/app/_generated/generated-graphql/: gql.ts  graphql.ts
frontend/app/_hooks/: useGraphQLRequest.ts  useQueryAccountsById.ts
frontend/app/_providers/: graz.tsx
frontend/app/_utils/: chains.ts  cosmwasm.ts
frontend/components/: alert.tsx  button.tsx  card.tsx  features.tsx  types.tsx  wallet.tsx
frontend/components/react/: hackcw20.tsx  handleChangeColor.tsx  index.ts  warn-block.tsx
frontend/config/: defaults.ts  features.ts
frontend/contexts/: AbstractContext.tsx  AccountContext.tsx  createContext.ts
frontend/contracts/board/schema/: module-schema.json
frontend/hooks/: prettierrc.yml  use-hack-cw20-balance.ts  useSubgraphQuery.ts
frontend/pages/: _app.tsx  index.tsx
frontend/pages/account/: [accountId].tsx
frontend/queries/: account.ts  index.ts
frontend/schemas/cw20-base/: cw20-base.json
frontend/scripts/: codegen.js
meta/: test_generate.sh  test_generate_local.sh
schema/: execute_msg.json  migrate_msg.json  module-schema.json  query_msg.json
schema/my-adapter/0.0.1/: instantiate_msg.json  query_msg.json
schema/my-adapter/0.0.1/raw/: execute.json  instantiate.json  response_to_status.json
schema/my-app/0.0.1/: execute_msg.json  instantiate_msg.json  migrate_msg.json  module-schema.json  query_msg.json
schema/my-app/0.0.1/raw/: execute.json  instantiate.json
schema/raw/: execute.json  instantiate.json  migrate.json  query.json
scripts/: schema.sh
src/: contract.rs  dependencies.rs  error.rs  interface.rs  lib.rs  msg.rs  state.rs
src/handlers/: execute.rs  instantiate.rs  migrate.rs  query.rs  receive.rs
src/replies/: execute.rs  instantiate.rs  mod.rs
tests/: integration.rs
