[package]
name = "fee-collector-app"
version = "0.0.1"
authors = [
  "CyberHoward <cyberhoward@protonmail.com>",
  "Adair <adair@abstract.money>",
  "Abstract Money <contact@abstract.money>",
]
edition = "2021"
homepage = ""
documentation = ""
repository = ""
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "abstractsdk"]

# Enable the version 2 feature resolver, which avoids unifying features for targets that are not being built
#
# Critically this prevents dev-dependencies from enabling features even when not building a target that
# uses dev-dependencies, e.g. the library crate. This in turn ensures that we can catch invalid feature
# flag combinations that would otherwise only surface in dependent crates
#
# Reference - https://doc.rust-lang.org/nightly/cargo/reference/features.html#feature-resolver-version-2
# See - https://github.com/apache/arrow-rs/pull/1822/files
resolver = "2"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []
interface = ["export", "dep:abstract-boot", "dep:boot-core"]
schema = ["abstract-app/schema"]

[dependencies]
cosmwasm-std = { version = "1.1" }
cosmwasm-schema = { version = "1.1" }
cw-controllers = { version = "1.0.1" }
cw-storage-plus = "1.0.1"
cw20 = { version = "1.0.1" }
cw20-base = { version = "1.0.1", features = ["library"] }
thiserror = { version = "1.0" }
schemars = "0.8"
protobuf = { version = "2", features = ["with-bytes"] }
cw-asset = { version = "3.0" }

abstract-core = { version = "0.14" }
abstract-app = { version = "0.14" }
abstract-sdk = { version = "0.14" }
# TODO: once stable, this should be updated to the stable release
boot-core = { version = "0.10.0", optional = true }
boot-cw-plus = { git = "https://github.com/AbstractSDK/cw-orchestrator.git", tag = "v0.10.2" }

abstract-boot = { version = "0.14", optional = true }
abstract-dex-api = { git = "https://github.com/AbstractSDK/apis.git", tag = "v0.14.2", default-features = false }
abstract-cw-staking-api = { git = "https://github.com/AbstractSDK/apis.git", tag = "v0.14.2", default-features = false }

[dev-dependencies]
boot-core = { version = "0.10", features = ["daemon"] }
fee-collector-app = { path = ".", features = [
  "interface",
], package = "fee-collector-app" }
speculoos = "0.11.0"
abstract-boot = { version = "0.14", features = ["daemon"] }
abstract-testing = { version = "0.14" }
semver = "1.0"
anyhow = "1"
tokio = { version = "1.4", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
clap = { version = "4.0.32", features = ["derive"] }
abstract-sdk = { version = "0.14", features = ["test-utils"] }
wyndex-bundle = { git = "https://github.com/AbstractSDK/integration-bundles.git", tag = "v0.3.1" }
cw-multi-test = "0.16"
abstract-dex-api = { git = "https://github.com/AbstractSDK/apis.git", tag = "v0.14.2", features = [
  "juno",
  "boot",
] }
abstract-cw-staking-api = { git = "https://github.com/AbstractSDK/apis.git", tag = "v0.14.2", features = [
  "juno",
  "boot",
] }
