[package]
name = "my-adapter"
version = "0.0.1"
authors = [
  "CyberHoward <cyberhoward@protonmail.com>",
  "Adair <adair@abstract.money>",
  "Abstract Money <contact@abstract.money>",
]
edition = "2021"
homepage = ""
documentation = ""
repository = ""
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "abstractsdk"]
resolver = "2"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "schema"
required-features = ["schema"]

[[example]]
name = "local_daemon"
required-features = ["daemon"]

[[example]]
name = "publish"
required-features = ["daemon"]

[features]
default = ["export"]
export = []
schema = ["abstract-adapter/schema"]
interface = [
  "export",
  "dep:abstract-interface",
  "dep:cw-orch",
  "my-package/interface",
]
daemon = ["interface", "cw-orch/daemon"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-controllers = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
cw-asset = { workspace = true }
abstract-adapter = { workspace = true }
abstract-sdk = { workspace = true }
abstract-std = { workspace = true }
abstract-interface = { workspace = true, optional = true }
my-package = { workspace = true }

# Dependencies for interface
cw-orch = { workspace = true, optional = true }

[dev-dependencies]
my-adapter = { workspace = true, features = ["interface"] }
abstract-client = { workspace = true }
abstract-adapter = { workspace = true, features = ["test-utils"] }
speculoos = { workspace = true }
semver = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
cw-orch = { workspace = true }
clap = { workspace = true, features = ["derive"] }
