[package]
name = "my-app"
version = "0.0.1"
authors = [
  "CyberHoward <cyberhoward@protonmail.com>",
  "Adair <adair@abstract.money>",
  "Abstract Money <contact@abstract.money>",
]
edition = "2021"
homepage = ""
documentation = ""
repository = ""
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "abstractsdk"]
resolver = "2"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"
required-features = ["schema"]

[[bin]]
name = "publish"
required-features = ["daemon-bin"]

[[bin]]
name = "local_daemon"
required-features = ["daemon-bin"]

[features]
default = ["export"]
export = []
daemon-bin = [
  "cw-orch/daemon",
  "dep:clap",
  "dep:abstract-client",
  "dep:dotenv",
  "dep:env_logger",
]
schema = ["abstract-app/schema"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-controllers = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
cw-asset = { workspace = true }
abstract-app = { workspace = true }
const_format = { workspace = true }

# Dependencies for interface
cw-orch = { workspace = true }
abstract-interface = { workspace = true }

# Dependencies for bins
clap = { workspace = true, optional = true, features = ["derive"] }
abstract-client = { workspace = true, optional = true }
dotenv = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }

[dev-dependencies]
my-app = { workspace = true }
abstract-client = { workspace = true }
abstract-app = { workspace = true, features = ["test-utils"] }
