[package]
name = "{{standalone_name | kebab_case}}"
version = "0.0.1"
authors = []
edition = "2021"
homepage = ""
documentation = ""
repository = ""
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "abstractsdk"]
resolver = "2"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"
required-features = ["schema"]

[[bin]]
name = "publish"
required-features = ["daemon-bin"]

[[bin]]
name = "local_daemon"
required-features = ["daemon-bin"]

[features]
default = ["export"]
export = []
daemon-bin = [
  "cw-orch/daemon",
  "dep:clap",
  "dep:abstract-client",
  "dep:dotenv",
  "dep:env_logger",
]
schema = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-controllers = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
cw-asset = { workspace = true }
abstract-standalone = { workspace = true }
const_format = { version = "0.2.32" }

# Dependencies for interface
cw-orch = { workspace = true }
abstract-interface = { workspace = true }

# Dependencies for bins
clap = { workspace = true, optional = true, features = ["derive"] }
abstract-client = { workspace = true, optional = true }
dotenv = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }

[dev-dependencies]
{{standalone_name | kebab_case}} = { path = "." }
abstract-client = { workspace = true }
abstract-standalone = { workspace = true, features = ["test-utils"] }
